--- a/site/Bastion of rock.html
+++ b/site/Bastion of rock.html
@@ -21,10 +21,21 @@
 				</nav>
 				<div class="search">
 					<input>
-					<a href="#">ПОИСК</a>
+					<a class="button" href="#">ПОИСК</a>
 				</div>
 			<!-- <img src = "Материалы для сайта/harmonix-offering-every-dlc-song-ever-for-rock-ban_sbyt.1200.webp" -->
 			</div>	
 		</header>
+		
+		<section class="main-page">
+			<div class="first_block">
+				<div class="first_block_image">
+					<a>БУДЬТЕ В КУРСЕ ВСЕХ АКТУАЛЬНЫХ НОВОСТЕЙ</a>
+					<a>РОК И МЕТАЛ МУЗЫКИ</a>
+					<a>ВМЕСТЕ С НАМИ</a>
+				</div>
+			</div>
+		</section>
+		
 	</body>
 </html>
