--- a/Bastion of rock.html
+++ b/Bastion of rock.html
@@ -71,7 +71,7 @@
 						<img class="image" src="img/Sabaton - The War to End All Wars.jpg" width="340" height="340">
 						<a class="mini_title">SABATON</a>
 						<a class="mini_title">THE WAR TO END ALL WARS</a>
-						<a class="mini_title">РОК-БУНТАРСТВЕ, ФУТБОЛКАХ</a>
+						<a class="mini_title">4 МАРТА 2022</a>
 					</div>
 					<div class="fourth_block_images">
 						<img class="image" src="img/FiveFingerDeathPunch_Afterlife.jpg" width="340" height="340">
